# chatbot-condominium

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
src/: config.py  main.py
src/bot/: conversation.py  handlers.py  utils.py
src/db/: faiss_db.py  initialize_db.py  pdf_processor.py
